zwave/eu/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: zwave
spec:
  selector:
    matchLabels:
      name: zwave-eu
  template:
    metadata:
      labels:
        name: zwave-eu
    spec:
      containers:
      - name: zwave-eu
      nodeSelector:
        kubernetes.io/hostname: stick1
