zwave/eu/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zwave
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: auth-eu

spec:
  rules:
    - host: zwave-eu.p.cns.me
      http:
        paths:
          - backend:
              serviceName: zwave-eu
              servicePort: http
